# ubirch-mbed-nfc

./: .gitignore  .mbedignore  CMakeLists.txt  NDEF.git.lib  README.md
NTAG_I2C_API/src/: ntag_interface.cpp  ntag_parser.c
NTAG_I2C_API/src/HAL_I2C/: i2c_k82.c  i2c_lpc11u6x.c  i2c_lpc8xx.c
NTAG_I2C_API/src/HAL_I2C/inc/: HAL_I2C_K82.h  HAL_I2C_driver.h
NTAG_I2C_API/src/HAL_I2C/tests/: i2c_driver_tests.c
NTAG_I2C_API/src/HAL_ISR/: isr_driver_intern.h  isr_lpc11u6x.c  isr_lpc_intern.h
NTAG_I2C_API/src/HAL_ISR/inc/: HAL_ISR_callback_list.h  HAL_ISR_driver.h
NTAG_I2C_API/src/HAL_NTAG/: ntag_bridge.c  ntag_driver.c  ntag_driver_intern.h
NTAG_I2C_API/src/HAL_NTAG/inc/: ntag_bridge.h  ntag_defines.h  ntag_device_list.h  ntag_driver.h
NTAG_I2C_API/src/HAL_NTAG/tests/: ntag_driver_tests.c
NTAG_I2C_API/src/HAL_TMR/inc/: HAL_timer_driver.h
NTAG_I2C_API/src/HAL_UCODE/inc/: ucode_driver.h
NTAG_I2C_API/src/HAL_UCODE/tests/: ucode_driver_tests.c
NTAG_I2C_API/src/inc/: global_types.h  ntag_parser.h  rfid_api_full.h
example/: ex_defs.h  ndef_test.cpp  rw_eeprom.cpp  rw_sram.cpp
source/: HAL_I2C_driver.h  HAL_timer_driver.h  main.cpp  nfc_defines.h  ntag_bridge.c  ntag_bridge.h  ntag_defines.h  ntag_driver.c  ntag_driver.h  ntag_interface.cpp  uNFC.c
source/inc/: HAL_I2C_driver.h  HAL_timer_driver.h  ntag_bridge.h  ntag_defines.h  ntag_driver.h
